2014-09-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* jp2image.c: Add newline at end of file.
	(read_box_hdr): Correctly handle 8byte lbox value.
	(read_res__data): Change result type 'unsigned long' => 'void'.
	(scan_res_): Reindent.

	No reason to use 'long' for 32-bit integers.
	* bmpimage.[ch], jp2image.[ch], xbb.c: Change bmp_get_bbox() and
	jp2_get_bbox() args 'long *' => 'int *'.

2014-09-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: If input string is UTF16BE with BOM, do nothing in
	maybe_reencode_utf8().

2014-09-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	No reason to use 'long' for 32-bit integers.
	* dvi.[ch], pkfont.c, specials.[ch], tfm.[ch]: Use (u)int32_t
	instead of long, UNSIGNED_QUAD, etc.
	* dvipdfmx.c: Replace long => int.
	* jp2image.c, otl_conf.c: Drop rewind() after file_size().
	* mfileio.[ch]: New functions xfile_size(), xseek_absolute(),
	xseek_relative(), xseek_end(), and xtell_position().
	* numbers.[ch]: Replace (UN)SIGNED_BYTE => (un)signed char,
	(UN)SIGNED_PAIR => (un)signed short, (UN)SIGNED_TRIPLE =>
	un)signed int, (UN)SIGNED_QUAD => (u)int32_t.
	New functions get_unsigned_num() and get_positive_quad().
	* vf.c: Use get_positive_quad() and get_unsigned_num().

2014-09-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* vf.c: Add missing break in case X1: case X2: case X3: case X4:
	in void vf_set_char(int32_t ch, int vf_font).

2014-08-24  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* t1_char.c: Fix a bug in type1 handling reported by Bob Tennent
	(http://tug.org/pipermail/tex-live/2014-June/035580.html).

2014-08-22  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* error.h: Allow Unicode messages on Windows console.

2014-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* vf.c (get_pkt_unsigned_num): Fixed a stupid bug/typo.

2014-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* numbers.[ch]: New function skip_bytes().
	* vf.[ch]: Simplify VF reading. Replace, e.g., long => int32_t.
